added basic orders.html page. working on #122

--- a/src/main/resources/static/css/fmstyle.css
+++ b/src/main/resources/static/css/fmstyle.css
@@ -202,3 +202,10 @@
 }
 /********************************/
 
+/********************************* order head styles */
+.order-selected {
+    background-color: #e9ecef; /* BS4 jumbotron */
+    /* BS4 --light: #f8f9fa; */
+}
+/********************************/
+
