--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -160,7 +160,7 @@
             <!-- footer -->
             <footer th:replace="fragments/components::footer"></footer>
         </div>
-        <script th:src="@{/js/usersCollapse.js}"></script>
+        <script th:src="@{/js/aCollapse.js}"></script>
         <!-- pagination functionality -->
         <a id="paginationTrigger" style="display: none"></a>
         <script th:replace="fragments/components::paginationMvcVariables"></script>
