--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -42,7 +42,7 @@
                                 </li>
                                 <!--user links-->
                                 <li class="nav-item" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
-                                    <a class="nav-link text-white font-weight-bold" th:href="@{/user/orders}">My Purchases</a>
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/orders}">My Purchases</a>
                                 </li>
                                 <li class="nav-item dropdown" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
@@ -67,7 +67,7 @@
                                     <a class="nav-link text-white font-weight-bold" th:href="@{/admin/users}">Users</a>
                                 </li>
                                 <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-                                    <a class="nav-link text-white font-weight-bold" th:href="@{/admin/orders}">Orders</a>
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/orders}">Orders</a>
                                 </li>
                                 <li class="nav-item dropdown" sec:authorize="hasRole('ADMIN')">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">Settings</a><!--id="navbardrop"-->
