--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -50,7 +50,7 @@
                             </p>
                             <!-- admin options -->
                             <select sec:authorize="hasRole('ADMIN')" class="custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria" style="max-width: 70%">
-                                <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.BookSortCriteria).values()}"
+                                <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.BookSortCriteria).values()}"
                                         th:value="${sc.ordinal()}"
                                         th:text="${sc.text}"
                                         th:selected="${sort ne null && sc.ordinal() eq sort.ordinal()}">
@@ -58,11 +58,11 @@
                             </select>
                             <!-- no-admin options -->
                             <select sec:authorize="!hasRole('ADMIN')" class="custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria" style="max-width: 70%">
-                                <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.BookSortCriteria).values()}"
+                                <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.BookSortCriteria).values()}"
                                         th:value="${sc.ordinal()}"
                                         th:text="${sc.text}"
                                         th:selected="${sort ne null && sc.ordinal() eq sort.ordinal()}"
-                                        th:if="${sc ne T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.BookSortCriteria).STATUS_ASC && sc ne T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.BookSortCriteria).STATUS_DESC}">
+                                        th:if="${sc ne T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.BookSortCriteria).STATUS_ASC && sc ne T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.BookSortCriteria).STATUS_DESC}">
                                 </option>
                             </select>
                         </div>
