--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -52,7 +52,7 @@
                             </p>
                             <!-- admin options -->
                             <select sec:authorize="hasRole('ADMIN')" class="custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria" style="max-width: 80%">
-                                <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.OrderSortCriteria).values()}"
+                                <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.OrderSortCriteria).values()}"
                                         th:value="${sc.ordinal()}"
                                         th:text="${sc.text}"
                                         th:selected="${sort ne null && sc.ordinal() eq sort.ordinal()}">
@@ -60,11 +60,11 @@
                             </select>
                             <!-- no-admin options -->
                             <select sec:authorize="!hasRole('ADMIN')" class="custom-select custom-select-sm text-secondary bg-light" id="paginationSortCriteria" style="max-width: 70%">
-                                <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.OrderSortCriteria).values()}"
+                                <option th:each="sc : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.OrderSortCriteria).values()}"
                                         th:value="${sc.ordinal()}"
                                         th:text="${sc.text}"
                                         th:selected="${sort ne null && sc.ordinal() eq sort.ordinal()}"
-                                        th:if="${sc ne T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.OrderSortCriteria).USER_ASC && sc ne T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.OrderSortCriteria).USER_DESC}">
+                                        th:if="${sc ne T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.OrderSortCriteria).USER_ASC && sc ne T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.sort.OrderSortCriteria).USER_DESC}">
                                 </option>
                             </select>
                         </div>
@@ -90,7 +90,7 @@
                                         <small class="font-weight-lighter">Reference: </small><span th:text="${order.id}"></span>
                                     </p>
                                     <p class="font-weight-light text-dark">
-                                        <small class="font-weight-lighter">Date: </small><span th:text="${order.date}"></span>
+                                        <small class="font-weight-lighter">Date: </small><span th:text="${order.formattedCreatedDateTime}"></span>
                                     </p>
                                 </div>
                                 <!-- middle info -->
@@ -99,7 +99,7 @@
                                         <small class="font-weight-lighter">User: </small><span th:text="${order.user.email}"></span>
                                     </p>
                                     <p class="font-weight-light text-dark" sec:authorize="hasRole('ADMIN')">
-                                        <small class="font-weight-lighter">Total amount: </small>€ <span th:text="${order.payment.getFormattedAmount()}"></span>
+                                        <small class="font-weight-lighter">Total amount: </small>€ <span th:text="${order.payment.formattedAmount}"></span>
                                     </p>
                                     <p class="font-weight-light text-dark mt-3" sec:authorize="hasRole('USER')">
                                         <small class="font-weight-lighter">Status: </small><span th:text="${order.status.text}"></span>
