--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -113,9 +113,9 @@
                                     <div class="mt-n2" sec:authorize="hasRole('ADMIN')">
                                         <form th:action="@{/admin/setOrderStatus}" method="POST">
                                             <input type="hidden" name="orderId" th:value="${order.id}"/>
-                                            <!--<input type="hidden" name="pageNo" th:value="${pageOfEntities.number}"/>
+                                            <input type="hidden" name="pageNo" th:value="${pageOfEntities.number}"/>
                                             <input type="hidden" name="pageSize" th:value="${pageSize.ordinal()}"/>
-                                            <input type="hidden" name="sort" th:value="${sort.ordinal()}"/>-->
+                                            <input type="hidden" name="sort" th:value="${sort.ordinal()}"/>
                                             <div class="form-group">
                                                 <div class="input-group">
                                                     <select class="custom-select custom-select-sm text-secondary border border-secondary" name="orderStatus">
