--- a/src/main/resources/templates/bookForm.html
+++ b/src/main/resources/templates/bookForm.html
@@ -16,8 +16,11 @@
                 <div class="col-sm-2 bg-white"></div>
                 <div class="col-sm-8">
                     <form class="needs-validation" novalidate id="isbnForm" th:action="@{/admin/bookForm}" th:object="${bookForm}" method="POST" enctype="multipart/form-data" action="#">
-                        <input type="hidden" th:if="${pn ne null}" name="pn" th:value="${pn}"/>
+                        <!--<input type="hidden" th:if="${pn ne null}" name="pn" th:value="${pn}"/>-->
                         <input type="hidden" th:field="*{bookId}"/>
+                        <input type="hidden" th:if="${pageNo ne null}" name="pageNo" th:value="${pageNo}"/>
+                        <input type="hidden" th:if="${pageSize ne null}" name="pageSize" th:value="${pageSize}"/>
+                        <input type="hidden" th:if="${sort ne null}" name="sort" th:value="${sort}"/>
                         <div th:replace="fragments/components::backendGenericObjectFieldErrors"></div>
                         <div class="form-row">
                             <div class="col-sm-6 bg-light">
